# tts-bot

./: .env.example  .env.hk  .env.us  .gitignore  AGENTS.md  ARCHITECTURE.md  DEPLOY.md  DEPLOY_HK.md  DOCKER.md  DOCKER_DEPLOY.md  Dockerfile  GO_REWRITE_PLAN.md  KIMI_MEMORY.md  MANIFEST.in  QUICKSTART.md  README.md  REDIS_QUEUE_PLAN.md  STT_API.md  TASK.md  VOICE_TO_TEXT_ARCHITECTURE.md  bot  docker-compose.hk.yml  docker-compose.yml  docker-start.sh  pyproject.toml  requirements.txt  setup.py  start.sh  status.sh  stop.sh  stt_api.py  tx.py
.kiro/settings/: lsp.json
.kiro/steering/: commander-core.md
bot-router/: bot_router.py  index.js  package-lock.json  package.json  service.sh
bot-router/conf/: nginx.conf
bot-router/html/: index.html
docs/: DESIGN.md
scripts/: ai_code_service.py  bot_api.py  bot_router.py  chat_monitor.sh  hot_reload.py  init_tmux.py  kiro_client.py  kiro_handler.py  monitor.py  monitor_kiro.py  monitor_kiro.sh  publish.sh  qa_matcher.py  run.sh  start.sh  supervisor.py  ttyd_collector.py  voice_receiver.py
tests/: test_bot.py  test_integration.py
tmp/: simple_test.js
tts_bot/: __init__.py  ai_backend.py  bot.py  config.py  default_stt.py  forward_config.py  kiro_tmux_backend.py  redis_queue.py  session_map.py  stt_backend.py  tmux_backend.py
web/: server.py  simple_voice.html  simple_voice_backup.html  simple_voice_minimal.html  voice_chat.html
