[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tts-tg-bot"
version = "1.0.1"
description = "Telegram bot for text-to-speech and speech-to-text conversion"
readme = "README.md"
authors = [
    {name = "TTS Bot Team", email = "dev@example.com"}
]
keywords = ["telegram", "bot", "tts", "stt", "speech", "text-to-speech"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Chat",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "python-telegram-bot>=20.0",
    "edge-tts>=6.0.0",
    "SpeechRecognition>=3.10.0",
    "pydub>=0.25.0",
]

[project.scripts]
tts-tg-bot = "tts_bot.bot:main"

[project.urls]
Homepage = "https://github.com/yourusername/tts-tg-bot"

[tool.setuptools]
packages = ["tts_bot"]
